--- a/_posts/2020-08-15-hms.markdown
+++ b/_posts/2020-08-15-hms.markdown
@@ -49,7 +49,7 @@ Przeniesienia do HMS możesz dokonać na kilka sposobów. To, które wybierzesz,
 
 Odradzam jakiekolwiek próby instalowania tych usług na telefonach innej marki niż Huawei czy Honor. Możliwe, że uda się zainstalować HMS Core, być może nawet z poziomu Sklepu Play, nie gwarantuje to jednak, że wszystkie usługi działały poprawnie.
 
-Najlepiej kupić któryś z ostatnich Huawei. Nada się także któreś ze starszych urządzeń, na których można mieć zarówno HMS jak i GMS (na przykład Huawei P9). Jeśli nie możemy mieć jakiegokolwiek telefonu tej firmy, pomocna będzie wspomniana już [wtyczka][hms-toolkit]. Usługa [Cloud Debugging][hms-cloud-debugging] umożliwia testowanie aplikacji na telefonie z farmy urządzeń. Usługa jest darmowa. Jedynym ograniczeniem jest konieczność zmiany urządzenia co dwie godziny i ponownego zalogowania po dwudziestu godzinach korzystania. Ekran smartfona jest widoczny w okienku w Android Studio, można stawiać breakpointy i czytać Logcata, tak jakby ten telefon miało się na biurku. Największą wadą usługi jest jej powolne działanie - długi czas reakcji na kliknięcie czy pobierania wartości zmiennych podczas debugowania aplikacji. Nie ma też możliwości wprowadzania znaków z fizycznej klawiatury albo przynajmniej nie jest ona włączona domyślnie. Nie udało mi się też znaleźć informacji, jak włączyć taką opcję.
+Najlepiej kupić któryś z ostatnich Huawei. Nada się także któreś ze starszych urządzeń, na których można mieć zarówno HMS jak i GMS (na przykład Huawei P9). Jeśli nie możemy mieć jakiegokolwiek telefonu tej firmy, pomocna będzie wspomniana już [wtyczka][hms-toolkit]. Usługa [Cloud Debugging][hms-cloud-debugging] umożliwia testowanie aplikacji na telefonie z farmy urządzeń. Jest darmowa. Jedynym ograniczeniem jest konieczność zmiany urządzenia co dwie godziny i ponownego zalogowania po dwudziestu godzinach korzystania. Ekran smartfona jest widoczny w okienku w Android Studio, można stawiać breakpointy i czytać Logcata, tak jakby ten telefon miało się na biurku. Największą wadą usługi jest jej powolne działanie - długi czas reakcji na kliknięcie czy pobierania wartości zmiennych podczas debugowania aplikacji. Nie ma też możliwości wprowadzania znaków z fizycznej klawiatury albo przynajmniej nie jest ona włączona domyślnie. Nie udało mi się też znaleźć informacji, jak włączyć taką opcję.
 
 Najbardziej brakuje możliwości uruchomienia zwykłego emulatora z EMUI z poziomu AVD Manager. Jedynym wyjściem będzie skorzystanie z rozwiązania typu [Genymotion][genymotion].
 
